--- a/Yanz/YanzWeb/YanzWeb.csproj
+++ b/Yanz/YanzWeb/YanzWeb.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Yanz.BLL\Yanz.BLL.csproj" />
     <ProjectReference Include="..\Yanz.DAL\Yanz.DAL.csproj" />
   </ItemGroup>
 
